# vs22-cmake-presets-vcpkg

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json  vcpkg.json
.cmake/presets/: hidden.json  windows-ninja-multi.json
src/: lib-minimal.cpp
